--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,19 +7,24 @@
     <meta name="description" content="Your AI-powered shopping assistant that helps you make sustainable choices while earning rewards. Shop smarter with Walmart Genie." />
     <meta name="author" content="Walmart Genie" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/icon.ico" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+    <!-- Open Graph -->
     <meta property="og:title" content="Walmart Genie - Shop Smarter. Live Greener." />
     <meta property="og:description" content="Your AI-powered shopping assistant that helps you make sustainable choices while earning rewards." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icon.ico" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@walmart" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/icon.ico" />
   </head>
 
   <body>
